--- a/calculadora.html
+++ b/calculadora.html
@@ -4,7 +4,7 @@
   <title>Calculadora de Lucas</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Times New Roman, Times New Roman;
     }
     .calculator {
       width: 300px;
@@ -34,18 +34,18 @@
         <body>
   <div class="calculator">
     <div class="output" id="output">0</div>
-    <button class="btn" onclick="clearOutput()">1</button>
-    <button class="btn" onclick="appendToOutput('7')">2</button>
-    <button class="btn" onclick="appendToOutput('8')">3</button>
-    <button class="btn" onclick="appendToOutput('9')">4</button>
-    <button class="btn" onclick="appendToOutput('+')">5</button>
-    <button class="btn" onclick="appendToOutput('4')">6</button>
-    <button class="btn" onclick="appendToOutput('5')">7</button>
-    <button class="btn" onclick="appendToOutput('6')">8</button>
-    <button class="btn" onclick="appendToOutput('-')">9</button>
-    <button class="btn" onclick="appendToOutput('1')">-</button>
-    <button class="btn" onclick="appendToOutput('2')">+</button>
-    <button class="btn" onclick="appendToOutput('3')">%</button>
+    <button class="btn" onclick="clearOutput()">C</button>
+    <button class="btn" onclick="appendToOutput('2')">2</button>
+    <button class="btn" onclick="appendToOutput('3')">3</button>
+    <button class="btn" onclick="appendToOutput('4')">4</button>
+    <button class="btn" onclick="appendToOutput('5')">5</button>
+    <button class="btn" onclick="appendToOutput('6')">6</button>
+    <button class="btn" onclick="appendToOutput('7')">7</button>
+    <button class="btn" onclick="appendToOutput('8')">8</button>
+    <button class="btn" onclick="appendToOutput('9')">9</button>
+    <button class="btn" onclick="appendToOutput('-')">-</button>
+    <button class="btn" onclick="appendToOutput('+')">+</button>
+    <button class="btn" onclick="appendToOutput('1')">1</button>
     <button class="btn" onclick="appendToOutput('')"></button>
     <button class="btn" onclick="appendToOutput('0')">0</button>
     <button class="btn" onclick="calculateResult()">=</button>
@@ -77,4 +77,3 @@
   </script>
 </body>
 </html>
-
